--- a/style.css
+++ b/style.css
@@ -96,8 +96,8 @@ div {
 }
 
 #treasure-map-blank {
-  width: 70%;
-  margin-top: 50px;
+  width: 50%;
+  margin-top: 10%;
   z-index: 0;
 }
 
@@ -107,6 +107,16 @@ div {
   }
   #treasure-map-blank {
     display: none;
+  }
+  
+}
+
+@media screen and (min-width: 800px) {
+  #welcome-screen {
+    background-color: goldenrod;
+  }
+  #treasure-map-blank {
+    margin-top: 3%;
   }
   
 }
@@ -124,12 +134,6 @@ div {
   justify-content: center;
 }
 
-#name-screen-image {
-  position: absolute;
-  top: 50px;
-  left: 0px;
-}
-
 input {
   border-radius: 3px;
   background-color: whitesmoke;
@@ -143,13 +147,14 @@ input {
 
 #gameplay-area {
   background-color: white;
-  height: 100vh;
   text-align: center;
   color: red;
+  border: 3px, solid, black;
 }
 
-#name-screen {
+#name-screen-image {
   z-index: -1;
+  width: 50%;
 }
 
 #name-input, #submit-name {
@@ -162,8 +167,20 @@ input {
 .enter-name {
   font-size: 2rem;
   font-family: 'Pirata One', cursive;
+  z-index: 1;
+}
+
+#entered-name {
+  font-size: 2rem;
+  font-family: 'Pirata One', cursive;
+  color: red;
+  z-index: 1;
 }
 
 .hidden {
   display: none;
+}
+
+#quit-game {
+  margin-top: 25px;
 }
