--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
 
 a {
   text-decoration: none;
+  color: black;
 }
 
 a:visited {
@@ -190,8 +191,8 @@ input {
 }
 
 #quit-game:hover {
-background-color: rgb(140, 0, 0);
-color: yellow;
+background-color: rgb(74, 2, 2);
+color: goldenrod;
 }
 
 #gameplay-area2 {
